# KMMLU-criminal-law-test

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  run_all.sh
agent/: __init__.py  llm.py  prompt_tpl.py  retriever.py
data/kmmlu/: kmmlu_test.json
scripts/: build_batch_input.py  evaluate.py  evaluate_kmmlu_test.py  load_data.py  prepare_data.py
